# codespaces-wasm-rust

./: .gitignore
.devcontainer/: devcontainer.json
c-wasm/: add.cpp  add.html  add.js  add.wasm  new_add.cpp  new_add.html  new_add.js  new_add.wasm  new_add_create_wasm.html
evan-rust/rust-wasm/: Cargo.toml
evan-rust/rust-wasm/src/: lib.rs
evan-rust/rusts/: Cargo.toml  a  a.cpp  rusts.sln  word_count.txt
evan-rust/rusts/src/: db_mod.rs  dsa.rs  enum_mod.rs  estruct.rs  func.rs  function.rs  generic_mod.rs  guessing_game.rs  hello.txt  main.rs  match_mod.rs  mod_mod.rs  owner_mod.rs  slice_mod.rs  string_mod.rs  vectors_mod.rs
evan-rust/rusts/src/usefuls/: one.rs
k3s/kube/: dotnetsubscriber.yaml  ingress.yaml  jupyter-flask.yaml  jupyter.yaml  mosquito-deployment.yaml  mosquito.yaml  mqtt-dotnet-subscriber.yaml  postgres.yaml  prometheus-grafna.yaml  redis.yaml
k3s/pvc/: jupyter-pvc.yaml  mongodb-pvc.yaml  mysql-pvc.yaml  postgres-pvc.yaml  redis-pvc.yaml  sqlserver-pvc.yaml  wordpress-pvc.yaml
