[package]
name = "evan-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
